--- a/src/Cms/CoreBundle/Resources/config/validation.yml
+++ b/src/Cms/CoreBundle/Resources/config/validation.yml
@@ -153,19 +153,16 @@ Cms\CoreBundle\Document\Media:
               type: string
               message: 'siteId must be a string'
         filename:
-          - NotBlank: { message: 'Please add a filename' }
           - Type:
               type: string
               message: 'filename must be a string'
-        storage:
-          - Choice: { choices: [S3], message: 'Storage option is invalid. Please choose: S3' }
         mime:
            - Choice:
-              choices: [text/plain, text/csv, text/vcard, application/msword, application/pdf, application/rss+xml, audio/basic, audio/mpeg, audio/x-wav, video/x-msvideo, video/quicktime, video/mp4, video/mpeg, image/jpeg, image/png, gif, image/x-icon ]
+              choices: [text/plain, text/csv, text/vcard, application/msword, application/pdf, application/rss+xml, audio/basic, audio/mpeg, audio/x-wav, video/x-msvideo, video/quicktime, video/mp4, video/mpeg, image/jpeg, image/png, gif, image/x-icon, null ]
               message: A {{ value }} is not a valid file type. Accepted types include: text, csv, vcard, msword, pdf, rss(xml), mpeg, x-wav, msvideo, quicktime, mp4, mpeg, jpeg, png, gif, and x-icon.
         ext:
            - Choice:
-              choices: [txt, csv, vcf, doc, docx, pdf, xml, au, mpeg, wav, avi, mov, mp4, jpeg, jpg, png, gif, ico]
+              choices: [txt, csv, vcf, doc, docx, pdf, xml, au, mpeg, wav, avi, mov, mp4, jpeg, jpg, png, gif, ico, null]
               message: The extension {{ value }} is not a valid extion. Valid extensions include: txt, csv, vcf, doc, docx, pdf, xml, au, mpeg, wav, avi, mov, mp4, jpeg, jpg, png, gif and ico.
         size:
            - Type:
