--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
-  #user
+#user
 cms_core.user_register:
   pattern: /user/register/{account_type}
   defaults: { _controller: CmsCoreBundle:User:register, account_type = 'free' }
@@ -26,9 +26,16 @@ welcome.about:
   methods: [GET]
 
 welcome.about_slides:
-  pattern : /about/slides
+  pattern: /about/slides
   defaults: { _controller: CmsCoreBundle:Welcome:aboutSlides }
   methods: [GET]
+
+#app help
+cms_core.help:
+  pattern: /help
+  defaults: { _controller: CmsCoreBundle:Help:index }
+  methods: [GET]
+
 
 #app
 cms_core.app_index:
