updated routing to match api based on domain

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,9 +10,16 @@ cms_app:
     resource: "@CmsCoreBundle/Resources/config/routing_app.yml"
     prefix:   /app
 
+#cms_api_v1:
+#    resource: "@CmsCoreBundle/Resources/config/routing_api.yml"
+#    prefix:   /api/v1/
+
 cms_api_v1:
     resource: "@CmsCoreBundle/Resources/config/routing_api.yml"
-    prefix:   /api/v1/
+    host:     api.{domain}
+    prefix:   /v1/
+    requirements:
+        domain: %domain%
 
 cms_client:
     resource: "@CmsCoreBundle/Resources/config/routing_client.yml"
