updated assets, added thank you pages for signups

--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -1,14 +1,13 @@
 #user
 cms_core.user_register:
-  pattern: /user/register/{account_type}
-  defaults: { _controller: CmsCoreBundle:User:register, account_type = 'free' }
+  pattern: /user/register/{accountPlan}
+  defaults: { _controller: CmsCoreBundle:User:register, accountPlan: free }
   methods: [GET]
 
 cms_core.user_create:
   pattern: /user/create
   defaults: { _controller: CmsCoreBundle:User:create }
   methods: [POST]
-
 cms_core.user_save:
   pattern:  /user
   defaults: { _controller: CmsCoreBundle:User:save }
