added joomla landing page

--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -39,6 +39,11 @@ welcome.wordpress:
   defaults: { _controller: CmsCoreBundle:Welcome:wordpress }
   methods: [GET]
 
+welcome.joomla:
+  pattern: /joomla
+  defaults: { _controller: CmsCoreBundle:Welcome:joomla }
+  methods: [GET]
+
 #app help
 cms_core.help:
   pattern: /help
